   * note= attribute for [objectives], shown as footer, eg. for hints (#12927)
   * increase_attacks= attribute of [effect] now allows percentages (#13033)
   * new [random] representation as list allows complex scenarios to be saved
     (forum thread 5659)
   * better diagnostics on parsing: file inclusion sequence
   * added [scroll_to] (patch #3388, forum thread 3235)
 * editor improvements:
   * fixed editor file chooser when starting directory has many files (#11698)
   * made the starting position in editor start at player 1 (#10625)
 * improvements and bug fixes of the logging system
 * next_scenario: tentative start of MP campaign support
 * fix replays with idle_ai, as seen in user scenario Rebellion (#12943)
 * various bug fixes and code cleanups

Version 0.9.1:
 * user interface improvements:
   * added a shortcut for making screenshots
   * added support for Home/End in menus, ctrl-a/e/u in textboxes
   * fixed the formatting of wrapped text lines being lost
   * fixed the screen being incorrectly redrawn when resizing
   * fixed bug #12654 causing prestart events to be shown to the player
   * fixed bug #12758: gendered unit types repeated in attack type tooltip
   * fixed bug #12612: no description in help for units at first encounter as upgrade
   * fixed excess space in MP "/me " emotes
 * campaign improvements:
   * fixed bug in Northern Winter (HttT) where the Orcs attack each other
   * fixed the 'knockback' for WML Plague in TRoW
   * fixed missing music in the Crossroads (HttT)
 * multiplayer improvements:
   * fixed the lobby chat window not wrapping text
   * fixed the lobby chat staying at top when changing lobby screens
   * fixed the multiplayer "wait" lobby screen not correctly displaying empty and vacant slots.
   * made renaming units visible on replays and on multiplayer games
   * fixed bug #12759: "number of turns" not being remembered when creating multiplayer games